<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logoImage"
        android:layout_marginTop="40dp"
        android:src="@drawable/swolematebacklogo"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImage"
        android:id="@+id/muscleGroupsLayout"
        android:layout_centerHorizontal="true">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedborder"
            android:id="@+id/muscleGroupTable">

            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chestBox"
                    android:text="@string/chest"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/backBox"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/shoulderBox"
                    android:text="@string/shoulders"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />
            </TableRow>

            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/absBox"
                    android:text="@string/abs"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bicepsBox"
                    android:text="@string/biceps"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tricepsBox"
                    android:text="@string/triceps"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />
            </TableRow>

            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quadBox"
                    android:text="@string/quads"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hammyBox"
                    android:text="@string/hamstring"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/glutesBox"
                    android:text="@string/glutes"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/muscleGroupsLayout"
        android:layout_marginTop="40dp">

        <View android:id="@+id/strut"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:layout_alignParentLeft="true"
            android:id="@+id/powerButton"
            android:background="@drawable/buttonshape"
            android:layout_alignTop="@+id/hypButton"
            android:layout_alignParentBottom="true"
            android:textColor="@color/black"
            android:layout_toLeftOf="@id/strut" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/hypButton"
            android:background="@drawable/buttonshape"
            android:layout_toRightOf="@id/strut"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:text="@string/hypertrophy"/>

    </RelativeLayout>
</RelativeLayout>
